V Select hover theme color

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,6 +18,10 @@ body.dark * {
 
 @layer base {
 
+  :root {
+    --bg-form-color: #2563eb;
+  }
+
   p, div {
     @apply text-gray-900 dark:text-white;
   }
