Hide featurebase on public form pages

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -56,3 +56,9 @@ body.dark * {
     @apply text-gray-400 dark:text-gray-500;
   }
 }
+
+.public-page {
+  .fb-feedback-widget-feedback-button-container {
+    display: none;
+  }
+}
