Use `primary` tailwind classes instead of `blue`, allow primary to be set with env file

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -39,7 +39,7 @@ body.dark * {
   }
 
   a {
-    @apply text-blue-600 hover:underline text-inherit;
+    @apply text-primary-600 hover:underline text-inherit;
   }
 }
 
