--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -1,20 +1,34 @@
 @font-face {
-  font-family: 'GeneralSans-Variable';
-  src: url('/fonts/general-sans/GeneralSans-Variable.woff2') format('woff2'),
-  url('/fonts/general-sans/GeneralSans-Variable.woff') format('woff'),
-  url('/fonts/general-sans/GeneralSans-Variable.ttf') format('truetype');
-  font-weight: 200 700;
-  font-display: swap;
-  font-style: normal;
+    font-family: "Inter-Variable";
+    src: url("/fonts/inter/Inter-VariableFont_opsz,wght.ttf") format("truetype");
+    font-weight: 100 900;
+    font-display: swap;
+    font-style: normal;
 }
 
-/* Add GeneralSans alias */
 @font-face {
-  font-family: 'GeneralSans';
-  src: url('/fonts/general-sans/GeneralSans-Variable.woff2') format('woff2'),
-  url('/fonts/general-sans/GeneralSans-Variable.woff') format('woff'),
-  url('/fonts/general-sans/GeneralSans-Variable.ttf') format('truetype');
-  font-weight: 200 700;
-  font-display: swap;
-  font-style: normal;
-} 
+    font-family: "Inter-Variable";
+    src: url("/fonts/inter/Inter-Italic-VariableFont_opsz,wght.ttf")
+        format("truetype");
+    font-weight: 100 900;
+    font-display: swap;
+    font-style: italic;
+}
+
+/* Add Inter alias */
+@font-face {
+    font-family: "Inter";
+    src: url("/fonts/inter/Inter-VariableFont_opsz,wght.ttf") format("truetype");
+    font-weight: 100 900;
+    font-display: swap;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Inter";
+    src: url("/fonts/inter/Inter-Italic-VariableFont_opsz,wght.ttf")
+        format("truetype");
+    font-weight: 100 900;
+    font-display: swap;
+    font-style: italic;
+}
