feat: Introduce User Settings Modal and Update UI Components
- Added a `UserSettingsModal` component to enhance user experience by allowing users to manage their settings directly from the dropdown menu.
- Integrated the `UserSettingsModal` in `app.vue` and `UserDropdown.vue`, enabling modal visibility control through the app store.
- Updated the app store to manage the state of the `UserSettingsModal`, including methods for opening, closing, and setting the active tab.
- Adjusted styles in `app.css` to replace outdated color variables with neutral tones for improved visual consistency.
- Renamed the 'Dashboard' label to 'Home' in the sidebar for better clarity.

These changes aim to improve user interaction with settings management and ensure a consistent design across the application.

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -154,7 +154,7 @@
     ::before,
     ::backdrop,
     ::file-selector-button {
-        border-color: var(--color-gray-200, currentColor);
+        border-color: var(--color-neutral-200, currentColor);
     }
 
     button:not(:disabled),
@@ -174,17 +174,16 @@
     #app {
         font-family: Inter, sans-serif !important;
         min-height: 100vh;
+        color: var(--color-neutral-800);
+    }
+
+    :where(.dark) #app {
+        color: white;
     }
 
     p,
     div {
-        color: var(--color-neutral-800);
         text-align: inherit;
-    }
-
-    :where(.dark) p,
-    :where(.dark) div {
-        color: white;
     }
 
     h1,
@@ -326,7 +325,7 @@ body.dark * {
 @layer base {
     p,
     div {
-        @apply text-neutral-800 dark:text-white text-inherit;
+        @apply text-inherit;
     }
 
     h1,
