--- a/client/css/app.css
+++ b/client/css/app.css
@@ -372,3 +372,7 @@ body.dark * {
 .mention-input span[mention="true"] {
     @apply inline-flex items-center align-baseline leading-tight text-sm relative bg-blue-100 text-blue-800 border border-blue-200 rounded-md px-1 py-0.5 mx-0.5 max-w-[200px] whitespace-nowrap overflow-hidden truncate;
 }
+
+.crisp-client {
+    pointer-events: auto;
+}
